src/test/resources/30/single/opf/valid/cmt.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" xml:lang="en" unique-identifier="q">
<metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
  <dc:title id="title">Minimal EPUB 3.0</dc:title>
  <dc:language>en</dc:language>
  <dc:identifier id="q">NOID</dc:identifier>
  <meta property="dcterms:modified">2017-06-14T00:00:01Z</meta>
</metadata>
<manifest>
	<item id="css"  href="epub.css" media-type="text/css"/>
	<item id="js_001"  href="script_001.js" media-type="application/javascript"/>
	<item id="js_002"  href="script_002.js" media-type="text/javascript"/>
	<item id="font_001"  href="font_001.otf" media-type="application/vnd.ms-opentype"/>
	<item id="font_002"  href="font_002.woff" media-type="application/font-woff"/>
	<item id="font_003"  href="font_003.svg" media-type="image/svg+xml"/>
	<item id="font_004"  href="font_004.woff2" media-type="font/woff2"/>
	<item id="content_001"  href="content_001.xhtml" media-type="application/xhtml+xml"/>
	<item id="audio_001"  href="audio_001.mpg" media-type="audio/mpeg"/>
	<item id="audio_002"  href="audio_002.mp4" media-type="audio/mp4"/>
	<item id="video_001"  href="video_001.webm" media-type="video/webm"/>
	<item id="video_002"  href="video_002.mp4" media-type="video/mp4"/>
	<item id="video_003"  href="video_003.mp4" media-type="video/h264"/>
	<item id="pls_001"  href="pls_001.pls" media-type="application/pls+xml"/>
	<item id="smil_001"  href="smil_001.smil" media-type="application/smil+xml"/>
	<item id="nav"  href="nav.xhtml" media-type="application/xhtml+xml" properties="nav"/>
</manifest>
<spine>
  <itemref idref="content_001" />
</spine>
</package>